# Smithed-Halloween-Pack

./: .gitignore  README.md  beet.yaml  pyproject.toml
.github/workflows/: main.yml
datapack/data/hlw/advancements/zzz/: helmet_to_block.json  unequip_hat.json
datapack/data/hlw/damage_type/: crow.json  spook.json  spook_witch.json
datapack/data/hlw/decorations/: example.json  gravestone.json  scary_jacko.json  silly_jacko.json  spooky_jacko.json  zombie_plushie.json
datapack/data/hlw/functions/entity/: despawn.mcfunction  main.mcfunction  spawn.mcfunction
datapack/data/hlw/functions/player/: main.mcfunction
datapack/data/hlw/functions/technical/: 20t.mcfunction  load.mcfunction  tick.mcfunction
datapack/data/hlw/loot_tables/3d_helmet/: to_block.json  to_helmet.json
datapack/data/hlw/loot_tables/decorations/: blueprint.spooky_jacko.json  example.json  gravestone.json  scary_jacko.json  silly_jacko.json
datapack/data/hlw/loot_tables/entity/: generic.json  kaboomer.json  scarecrow.json  spook.json  witch_spook.json
datapack/data/hlw/loot_tables/item/: bee_boots.json  bee_chestplate.json  bee_helmet.json  bee_leggings.json  bitter_candy.json  blueprint.silly_jacko.json  blueprint.spooky_jacko.json  blueprint.zombie_plushie.json  candy_corn.json  goodie_bag.json  (+21 more)
datapack/data/hlw/predicates/: has_3dhat.json
decoration_generator/: generate.py  resources.py
decoration_generator/modules/: main.bolt
resourcepack/: pack.mcmeta
resourcepack/assets/hlw/: sounds.json
resourcepack/assets/hlw/font/: tooltip.json
resourcepack/assets/hlw/lang/: en_us.json
(+188 files in other folders)
